# breadu.info

./: .codeclimate.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  breadu.cabal  circle.yml  package.yaml  stack.yaml  update_breadu_server.sh
app/: CLI.hs  Main.hs
food/: common.csv
food/common/: de.csv  en.csv  ru.csv
lib/: BreadU.hs
lib/BreadU/: API.hs  Handlers.hs  Server.hs  Types.hs
lib/BreadU/Pages/: Errors.hs  Names.hs  Types.hs
lib/BreadU/Pages/CSS/: Names.hs  Own.hs
lib/BreadU/Pages/Content/: Footer.hs  Header.hs  IndexBody.hs
lib/BreadU/Pages/Content/Errors/: HTTP404.hs  Messages.hs
lib/BreadU/Pages/JS/: GA.hs  Own.hs  SocialButtons.hs
lib/BreadU/Pages/Markup/: IndexPage.hs
lib/BreadU/Pages/Markup/Common/: Footer.hs  HeadTag.hs  Header.hs  Resources.hs
lib/BreadU/Pages/Markup/Errors/: HTTP404.hs
lib/BreadU/Tools/: Calculator.hs  CommonFood.hs  FoodInfoParser.hs  FoodSuggestions.hs  Validators.hs
src/app/: CLI.hs
src/lib/BreadU/: API.hs  Handlers.hs  Server.hs  Types.hs
src/lib/BreadU/Pages/: Errors.hs
src/lib/BreadU/Pages/CSS/: Own.hs
src/lib/BreadU/Pages/Content/: Footer.hs  IndexBody.hs
src/lib/BreadU/Pages/Content/Errors/: HTTP404.hs
src/lib/BreadU/Pages/Markup/: IndexPage.hs
src/lib/BreadU/Pages/Markup/Common/: Footer.hs  Header.hs  Utils.hs
src/lib/BreadU/Tools/: Calculator.hs  CommonFood.hs  Validators.hs
src/update/: Main.hs
test/: CalculatorSpec.hs  Spec.hs
update/: Main.hs
